--- a/style.css
+++ b/style.css
@@ -366,8 +366,8 @@ article .icon {
 
 .project-img {
   border-radius: 2rem;
-  width: 90%;
-  height: 90%;
+  width: 320px;
+  height: 330px;
 }
 
 .project-title {
