--- a/style.css
+++ b/style.css
@@ -268,6 +268,8 @@ section {
 }
 
 .about-containers {
+  display: flex;
+  flex-wrap: wrap;
   gap: 2rem;
   margin-bottom: 2rem;
   margin-top: 2rem;
